# CAT

./: architecture.drawio
model/: pyproject.toml  requirements.txt
model/.astro/: config.yaml
model/dags/: preprocessing_pipline.py
model/src/: Diagnostics.py  config.py  dependency.py  docker-compose.yaml  feature_selection.py  load_data.py  logs.py  main.py  mlflow_config.json  preprocessing.py  pyproject.toml  run_mlflow.py
model/src/MultiModal/: Fusion_layer.py  PsychMultimodal.py  Type_Token_manager.py
model/src/Trait_predictor/: Trait_prediction.py  data_loader.py
model/src/config_data/: data_config.cfg  flow_config.cfg  lexicon.json  trait_lexicon_expanded.json
model/src/irt/: DichotomousIRT.py  PolychotomousIRT.py
model/src/patch/: mime_patch.py
model/src/saver/: Agreeableness_Alpha.csv  Agreeableness_Betas.csv  Agreeableness_thetas.csv  Alpha.csv  Betas.csv  Conscientiousness_Alpha.csv  Conscientiousness_Betas.csv  Conscientiousness_thetas.csv  Extraversion_Alpha.csv  Extraversion_Betas.csv  Extraversion_thetas.csv  Neuroticism_Alpha.csv  Neuroticism_Betas.csv  Neuroticism_thetas.csv  Openness_Alpha.csv  Openness_Betas.csv  Openness_thetas.csv  Types.csv  cccs_plot.html  grm_loss_curve.csv  likert_data.parquet  likert_data_preview.csv  pca_variance_summary.csv  processed_data_preview.csv  spearman_corr.csv  thetas.csv
model/src/worksheet/: worksheet.ipynb
