[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "mlflow>=3.5.1",
    "nvidia-ml-py>=13.580.82",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "psutil>=7.1.3",
    "pydantic-settings>=2.11.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
